Fixed hanging doggo so it cuts off, but it still scrolls on mobile

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -64,11 +64,18 @@ body {
   }
 
   #hanging_doggo {
+    overflow: hidden;
     position: absolute;
-    content: url("/images/short_doggo.svg");
-    top: -25px;
-    right: -230px;
-    transform: scaleX(-1) rotate(45deg);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    img {
+      position: absolute;
+      top: -25px;
+      right: -230px;
+      transform: scaleX(-1) rotate(45deg);
+    }
   }
 }
 
@@ -118,6 +125,9 @@ body {
         transform: rotate(-15deg);
       }
     }
+  }
+  #hanging_doggo {
+    display: none;
   }
 }
 
