--- a/stylesheets/text.scss
+++ b/stylesheets/text.scss
@@ -2,7 +2,7 @@
   font-family: "Indie Flower";
   font-style: normal;
   font-weight: normal;
-  src: local("Indie Flower Regular"), url("IndieFlower-Regular.ttf") format("truetype");
+  src: local("Indie Flower Regular"), url("/stylesheets/IndieFlower-Regular.ttf") format("truetype");
 }
 
 body {
